--- a/src/main/resources/ru/nucodelabs/gem/app-view.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/app-view.fxml
@@ -6,8 +6,8 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<VBox fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-      prefHeight="485.0" prefWidth="812.0" stylesheets="@./style.css" xmlns="http://javafx.com/javafx/17"
+<VBox fx:id="mainPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="720.0"
+      prefWidth="1280.0" stylesheets="@./style.css" xmlns="http://javafx.com/javafx/17"
       xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nucodelabs.gem.AppController">
     <MenuBar fx:id="menuBar">
         <Menu mnemonicParsing="false" text="%file">
@@ -65,25 +65,25 @@
                         <Insets/>
                     </opaqueInsets>
                     <LineChart fx:id="inaccuracyCurve" legendVisible="false" maxHeight="1.7976931348623157E308"
-                               minHeight="0.0" prefHeight="150.0" visible="false">
+                               minHeight="0.0" prefHeight="150.0">
                         <xAxis>
                             <NumberAxis forceZeroInRange="false" side="BOTTOM" tickLabelsVisible="false"/>
                         </xAxis>
                         <yAxis>
-                            <NumberAxis forceZeroInRange="false" lowerBound="-100.0" side="LEFT"/>
+                            <NumberAxis autoRanging="false" forceZeroInRange="false" lowerBound="-200.0"
+                                        minorTickCount="2" side="LEFT" tickUnit="50.0" upperBound="200.0"/>
                         </yAxis>
                         <opaqueInsets>
                             <Insets/>
                         </opaqueInsets>
                         <padding>
-                            <Insets left="32.0"/>
+                            <Insets left="24.0"/>
                         </padding>
                     </LineChart>
                 </TitledPane>
                 <TitledPane fx:id="vesPane" collapsible="false" maxHeight="1.7976931348623157E308" text="%ves">
                     <LineChart fx:id="vesCurve" alternativeColumnFillVisible="true" cacheShape="false"
-                               centerShape="false" legendVisible="false" minHeight="100.0" scaleShape="false"
-                               visible="false">
+                               centerShape="false" legendVisible="false" minHeight="100.0" scaleShape="false">
                         <xAxis>
                             <NumberAxis fx:id="vesCurveAxisX" forceZeroInRange="false" label="AB/2, m" prefHeight="26.0"
                                         prefWidth="481.0" side="BOTTOM" tickUnit="1.0" upperBound="4.0">
