--- a/src/main/resources/ru/nucodelabs/gem/app-view.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/app-view.fxml
@@ -67,11 +67,13 @@
                     <LineChart fx:id="inaccuracyCurve" legendVisible="false" maxHeight="1.7976931348623157E308"
                                minHeight="0.0" prefHeight="150.0" title="\%" titleSide="LEFT">
                         <xAxis>
-                            <NumberAxis forceZeroInRange="false" side="BOTTOM" tickLabelsVisible="false"/>
+                            <NumberAxis forceZeroInRange="false" minorTickLength="3.0" minorTickVisible="false"
+                                        side="BOTTOM" tickLabelsVisible="false" tickMarkVisible="false"
+                                        tickUnit="100.0"/>
                         </xAxis>
                         <yAxis>
                             <NumberAxis autoRanging="false" forceZeroInRange="false" lowerBound="-200.0"
-                                        minorTickCount="2" side="LEFT" tickUnit="50.0" upperBound="200.0"/>
+                                        minorTickCount="2" side="LEFT" tickUnit="100.0" upperBound="200.0"/>
                         </yAxis>
                         <opaqueInsets>
                             <Insets/>
@@ -80,6 +82,9 @@
                             <Insets left="9.0"/>
                         </padding>
                     </LineChart>
+                    <font>
+                        <Font name="System Font" size="13.0"/>
+                    </font>
                 </TitledPane>
                 <TitledPane fx:id="vesPane" collapsible="false" maxHeight="1.7976931348623157E308" text="%ves">
                     <LineChart fx:id="vesCurve" alternativeColumnFillVisible="true" cacheShape="false"
