--- a/src/main/resources/ru/nucodelabs/gem/style.css
+++ b/src/main/resources/ru/nucodelabs/gem/style.css
@@ -1,16 +1,16 @@
-#vesCurve .chart-series-line {
+#vesLineChart .chart-series-line {
     -fx-stroke: transparent;
 }
 
-#vesCurve #vesCurveAxisY .axis-label {
+#vesLineChart #vesLineChartYAxis .axis-label {
     -fx-label-padding: -75 0 0 0;
 }
 
-#vesCurve #vesCurveAxisX .axis-label {
+#vesLineChart #vesLineChartXAxis .axis-label {
     -fx-label-padding: 0 0 -15 0;
 }
 
-#vesCurve .chart-line-symbol.series0 {
+#vesLineChart .chart-line-symbol.series0 {
     -fx-background-color: LightGreen;
     -fx-border-color: MediumSeaGreen;
     -fx-background-radius: 50%;
@@ -19,21 +19,21 @@
     -fx-pref-height: 6px;
 }
 
-#vesCurve .chart-line-symbol.series1 {
+#vesLineChart .chart-line-symbol.series1 {
     -fx-background-color: LightCoral;
     -fx-border-color: FireBrick;
     -fx-background-radius: 100px 100px 0 0;
     -fx-border-radius: 100px 100px 0 0;
 }
 
-#vesCurve .chart-line-symbol.series2 {
+#vesLineChart .chart-line-symbol.series2 {
     -fx-background-color: LightBlue;
     -fx-border-color: CornflowerBlue;
     -fx-background-radius: 0 0 100px 100px;
     -fx-border-radius: 0 0 100px 100px;
 }
 
-#vesCurve .chart-line-symbol.series3 {
+#vesLineChart .chart-line-symbol.series3 {
     -fx-background-color: black;
     -fx-border-color: black;
     -fx-border-width: 1px;
@@ -41,16 +41,16 @@
     -fx-pref-height: 3px;
 }
 
-#vesCurve .chart-series-line.series3 {
+#vesLineChart .chart-series-line.series3 {
     -fx-stroke: rgba(0, 0, 0, 0.4);
     -fx-stroke-width: 2px;
 }
 
-#vesCurve .chart-series-line.series4 {
+#vesLineChart .chart-series-line.series4 {
     -fx-stroke: Blue;
 }
 
-#vesCurve .chart-line-symbol.series4 {
+#vesLineChart .chart-line-symbol.series4 {
     -fx-border-radius: 50%;
     -fx-border-width: 2px;
     -fx-pref-height: 7px;
@@ -60,7 +60,7 @@
     -fx-background-radius: 50%;
 }
 
-#vesCurve .chart-line-symbol {
+#vesLineChart .chart-line-symbol {
     -fx-border-width: 1px; /* можно сделать 0, чтобы обводки не было */
     -fx-border-color: black;
     -fx-border-radius: 0;
@@ -69,7 +69,7 @@
     -fx-pref-height: 4px;
 }
 
-#inaccuracyCurve .chart-series-line {
+#inaccuracyLineChart .chart-series-line {
     -fx-stroke: Crimson;
     -fx-stroke-width: 8px;
     -fx-stroke-line-cap: butt;
@@ -78,7 +78,7 @@
     -fx-stroke-miter-limit: 0.1;
 }
 
-#inaccuracyCurve .chart-line-symbol {
+#inaccuracyLineChart .chart-line-symbol {
     -fx-border-width: 0;
     -fx-pref-width: 8px;
     -fx-pref-height: 8px;
