--- a/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vescurves/VESCurves.css
+++ b/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vescurves/VESCurves.css
@@ -1,6 +1,7 @@
 #lineChart {
     -fx-padding: 0 0 10 40;
-    -fx-legend-visible: false;
+    -fx-legend-visible: true;
+    -fx-legend-side: top;
 }
 
 #lineChart .chart-plot-background {
