--- a/src/main/resources/ru/nucodelabs/gem/view/welcome/WelcomeView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/welcome/WelcomeView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
@@ -8,7 +9,7 @@
 <fx:root type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx"
          xmlns:fx="http://javafx.com/fxml"
          prefHeight="400.0" prefWidth="600.0"
-         style="-fx-background-color: White" stylesheets="@../common.css">
+         style="-fx-background-color: White" stylesheets="@../common.css, @WelcomeView.css">
 
     <MainMenuBar fx:id="menuBar"/>
     <HBox maxWidth="Infinity" maxHeight="Infinity" VBox.vgrow="ALWAYS" alignment="CENTER">
@@ -18,8 +19,13 @@
             </ImageView>
             <Text textOrigin="CENTER" VBox.vgrow="ALWAYS"
                   style="-fx-font-weight: bold; -fx-font-size: 22pt;" text="Добро пожаловать в GEM"/>
-            <Text wrappingWidth="350" VBox.vgrow="ALWAYS"
-                  text="Вы можете открыть файл SONET для интерпретации ВЭЗ.&#10;В меню: Файл > Открыть > EXP"/>
+            <HBox fx:id="textContainer">
+                <Text
+                        text="Вы можете открыть SONET-совместимый файл для интерпретации ВЭЗ."/>
+            </HBox>
+            <HBox fx:id="openEXPButtonContainer">
+                <Button fx:id="openEXPButton" text="Открыть файл EXP"/>
+            </HBox>
         </VBox>
     </HBox>
 
