Added Show/hide VES chart legend menu option

--- a/src/main/resources/ru/nucodelabs/gem/view/usercontrols/mainmenubar/MainMenuBar.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/usercontrols/mainmenubar/MainMenuBar.fxml
@@ -16,6 +16,11 @@
         <Menu text="%edit">
             <MenuItem text="Delete"/>
         </Menu>
+        <Menu text="%view">
+            <Menu text="%legend">
+                <CheckMenuItem fx:id="menuViewLegendsVESCurves" text="%ves"/>
+            </Menu>
+        </Menu>
         <Menu text="%help">
             <MenuItem text="About"/>
         </Menu>
