--- a/src/main/resources/ru/nucodelabs/gem/view/welcome/WelcomeView.css
+++ b/src/main/resources/ru/nucodelabs/gem/view/welcome/WelcomeView.css
@@ -1,6 +1,20 @@
+.root {
+    -fx-background-color: White;
+}
+
 #openEXPButtonContainer {
     -fx-alignment: center;
     -fx-padding: 0;
+}
+
+#openEXPButton {
+    -fx-font-weight: bold;
+    -fx-background-color: Green;
+    -fx-text-fill: White;
+}
+
+#openEXPButton:hover {
+    -fx-background-color: DarkGreen;
 }
 
 #textContainer {
