--- a/src/main/resources/ru/nucodelabs/gem/view/welcome/WelcomeView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/welcome/WelcomeView.fxml
@@ -9,7 +9,7 @@
 <fx:root type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx"
          xmlns:fx="http://javafx.com/fxml"
          prefHeight="400.0" prefWidth="600.0"
-         style="-fx-background-color: White" stylesheets="@../common.css, @WelcomeView.css">
+         stylesheets="@../common.css, @WelcomeView.css">
 
     <MainMenuBar fx:id="menuBar"/>
     <HBox maxWidth="Infinity" maxHeight="Infinity" VBox.vgrow="ALWAYS" alignment="CENTER">
@@ -20,8 +20,7 @@
             <Text textOrigin="CENTER" VBox.vgrow="ALWAYS"
                   style="-fx-font-weight: bold; -fx-font-size: 22pt;" text="Добро пожаловать в GEM"/>
             <HBox fx:id="textContainer">
-                <Text
-                        text="Вы можете открыть SONET-совместимый файл для интерпретации ВЭЗ."/>
+                <Text text="Вы можете открыть SONET-совместимый файл для интерпретации ВЭЗ."/>
             </HBox>
             <HBox fx:id="openEXPButtonContainer">
                 <Button fx:id="openEXPButton" text="Открыть файл EXP"/>
