theming + macOS only Use system menu option in View tab

--- a/src/main/resources/ru/nucodelabs/gem/view/usercontrols/mainmenubar/MainMenuBar.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/usercontrols/mainmenubar/MainMenuBar.fxml
@@ -16,7 +16,7 @@
         <Menu text="%edit">
             <MenuItem text="Delete"/>
         </Menu>
-        <Menu text="%view">
+        <Menu fx:id="menuView" text="%view">
             <Menu text="%legend">
                 <CheckMenuItem fx:id="menuViewLegendsVESCurves" text="%ves"/>
             </Menu>
