--- a/src/main/resources/ru/nucodelabs/gem/view/common.css
+++ b/src/main/resources/ru/nucodelabs/gem/view/common.css
@@ -36,8 +36,18 @@
     -fx-background-color: ForestGreen;
 }
 
-.menu-bar {
+.menu-bar, .menu, .menu-item, .menu-button, .context-menu {
     -fx-background-color: WhiteSmoke;
+    -fx-background-radius: 5px;
+}
+
+.context-menu {
+    -fx-border-color: GainsBoro;
+    -fx-border-width: 1px;
+    -fx-border-radius: 5px;
+    -fx-effect: null;
+    -fx-background-radius: 5px;
+    -fx-padding: 2px;
 }
 
 .split-pane {
