--- a/src/main/resources/ru/nucodelabs/gem/view/common.css
+++ b/src/main/resources/ru/nucodelabs/gem/view/common.css
@@ -45,7 +45,7 @@
     -fx-border-color: GainsBoro;
     -fx-border-width: 1px;
     -fx-border-radius: 5px;
-    -fx-effect: null;
+    /*-fx-effect: null;*/
     -fx-background-radius: 5px;
     -fx-padding: 2px;
 }
