--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Text?>
 <?import ru.nucodelabs.gem.view.usercontrols.mainmenubar.MainMenuBar?>
+<?import ru.nucodelabs.gem.view.usercontrols.misfitstacks.MisfitStacks?>
 <?import ru.nucodelabs.gem.view.usercontrols.vescurves.VESCurves?>
-<?import ru.nucodelabs.gem.view.usercontrols.vescurvestablesplit.VESCurvesTableSplit?>
 <fx:root type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx"
          xmlns:fx="http://javafx.com/fxml"
          stylesheets="@../common.css"
@@ -18,7 +19,34 @@
             <VESCurves/>
         </SplitPane>
 
-        <VESCurvesTableSplit fx:id="vesCurvesTable"/>
+        <VBox maxWidth="Infinity"
+              maxHeight="Infinity"
+              VBox.vgrow="ALWAYS">
+
+            <HBox alignment="CENTER" maxWidth="Infinity" style="-fx-background-color: WhiteSmoke">
+                <HBox style="-fx-padding: 5">
+                    <Button text="← Предыдущий пикет" fx:id="prevButton"/>
+                </HBox>
+                <HBox HBox.hgrow="ALWAYS" alignment="CENTER">
+                    <Text fx:id="text" text="VES"/>
+                </HBox>
+                <HBox style="-fx-padding: 5">
+                    <Button text="Следующий пикет →" fx:id="nextButton"/>
+                </HBox>
+            </HBox>
+            <SplitPane dividerPositions="0.7" maxHeight="Infinity" maxWidth="Infinity" VBox.vgrow="ALWAYS">
+
+                <SplitPane orientation="VERTICAL" dividerPositions="0.3" maxHeight="Infinity" VBox.vgrow="ALWAYS">
+                    <MisfitStacks fx:id="misfitStacks"/>
+                    <VESCurves fx:id="vesCurves"/>
+                </SplitPane>
+
+                <!-- placeholder -->
+                <VESCurves/>
+            </SplitPane>
+
+        </VBox>
+
     </SplitPane>
 
 </fx:root>
