--- a/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vescurves/VESCurves.css
+++ b/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vescurves/VESCurves.css
@@ -76,3 +76,9 @@
     -fx-tick-label-font-size: 12pt;
     -fx-font-size: 10pt;
 }
+
+#text {
+    -fx-fill: Gray;
+    -fx-font-size: 12;
+    -fx-padding: 5;
+}
