--- a/src/main/resources/ru/nucodelabs/gem/view/usercontrols/misfitstacks/MisfitStacks.css
+++ b/src/main/resources/ru/nucodelabs/gem/view/usercontrols/misfitstacks/MisfitStacks.css
@@ -18,3 +18,9 @@
     -fx-pref-height: 8px;
     -fx-background-color: Crimson;
 }
+
+#text {
+    -fx-fill: Gray;
+    -fx-font-size: 12;
+    -fx-padding: 5;
+}
