--- a/src/main/resources/ru/nucodelabs/gem/view/usercontrols/misfitstacks/MisfitStacks.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/usercontrols/misfitstacks/MisfitStacks.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.layout.*?>
@@ -13,11 +12,9 @@
          minWidth="0"
          stylesheets="@../../common.css, @MisfitStacks.css"
          VBox.vgrow="ALWAYS">
-    <Text fx:id="text" text="%misfit" textAlignment="CENTER" VBox.vgrow="NEVER">
-        <VBox.margin>
-            <Insets top="10.0"/>
-        </VBox.margin>
-    </Text>
+    <HBox maxWidth="Infinity">
+        <Text fx:id="text" text="%misfit" VBox.vgrow="NEVER"/>
+    </HBox>
     <LineChart fx:id="lineChart" VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity" title="\%"
                titleSide="LEFT" minHeight="0" minWidth="0">
         <xAxis>
