--- a/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vescurvestablesplit/VESCurvesTableSplit.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vescurvestablesplit/VESCurvesTableSplit.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.text.Text?>
 <?import ru.nucodelabs.gem.view.usercontrols.misfitstacks.MisfitStacks?>
 <?import ru.nucodelabs.gem.view.usercontrols.vescurves.VESCurves?>
+
 <fx:root type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx"
          xmlns:fx="http://javafx.com/fxml"
          maxWidth="Infinity"
@@ -23,15 +24,18 @@
             <Button text="Следующий пикет →" fx:id="nextButton"/>
         </HBox>
     </HBox>
-    <SplitPane dividerPositions="0.7" maxHeight="Infinity" maxWidth="Infinity" VBox.vgrow="ALWAYS">
+    <SplitPane maxHeight="Infinity" maxWidth="Infinity" VBox.vgrow="ALWAYS">
 
-        <SplitPane orientation="VERTICAL" dividerPositions="0.3" maxHeight="Infinity" VBox.vgrow="ALWAYS">
+        <SplitPane orientation="VERTICAL" dividerPositions="0.3" maxHeight="Infinity" maxWidth="Infinity" VBox.vgrow="ALWAYS">
             <MisfitStacks fx:id="misfitStacks"/>
             <VESCurves fx:id="vesCurves"/>
         </SplitPane>
+        <fx:include source="../vestables/Tables.fxml"/>
+        <!--<fx:include source="../vestables/ExperimentalTable.fxml"/>
+        <fx:include source="../vestables/ModelTable.fxml"/>
 
-        <!-- placeholder -->
-        <VESCurves/>
+        <- placeholder -->
+        <!--<VESCurves/>-->
     </SplitPane>
 
 </fx:root>
