--- a/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vestables/ExperimentalTable.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vestables/ExperimentalTable.fxml
@@ -9,8 +9,8 @@
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             maxWidth="Infinity" minWidth="120">
-    <Label text="%experimentalTable"/>
-    <TableView fx:id="ExperimentalTable" maxWidth="Infinity" minWidth="120">
+    <!--<Label text="%experimentalTable"/>-->
+    <TableView fx:id="experimentalTable" maxWidth="Infinity" minWidth="120">
         <columns>
             <TableColumn fx:id="expAB_2Column" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0"
                          text="%experimentalAB_2"/>
