--- a/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vescurves/VESCurves.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vescurves/VESCurves.fxml
@@ -19,7 +19,7 @@
                         side="BOTTOM" tickUnit="1.0"/>
         </xAxis>
         <yAxis>
-            <NumberAxis fx:id="lineChartYAxis" cache="true" forceZeroInRange="false"
+            <NumberAxis fx:id="lineChartYAxis" forceZeroInRange="false"
                         label="ρₐ (Ohm‧m)" lowerBound="1.0"
                         side="LEFT" tickUnit="1.0"/>
         </yAxis>
