--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.text.Text?>
 <?import ru.nucodelabs.gem.view.usercontrols.mainmenubar.MainMenuBar?>
 <?import ru.nucodelabs.gem.view.usercontrols.misfitstacks.MisfitStacks?>
+<?import ru.nucodelabs.gem.view.usercontrols.placeholder.Placeholder?>
 <?import ru.nucodelabs.gem.view.usercontrols.vescurves.VESCurves?>
 <fx:root type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx"
          xmlns:fx="http://javafx.com/fxml"
@@ -14,9 +15,8 @@
 
     <SplitPane orientation="VERTICAL">
         <SplitPane orientation="VERTICAL">
-            <!-- placeholder -->
-            <VESCurves/>
-            <VESCurves/>
+            <Placeholder text="%pseudoSection"/>
+            <Placeholder text="%geoSection"/>
         </SplitPane>
 
         <VBox maxWidth="Infinity"
@@ -41,8 +41,7 @@
                     <VESCurves fx:id="vesCurves"/>
                 </SplitPane>
 
-                <!-- placeholder -->
-                <VESCurves/>
+                <Placeholder text="Табличное представление"/>
             </SplitPane>
 
         </VBox>
