--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -7,6 +7,8 @@
 <?import ru.nucodelabs.gem.view.usercontrols.misfitstacks.MisfitStacks?>
 <?import ru.nucodelabs.gem.view.usercontrols.placeholder.Placeholder?>
 <?import ru.nucodelabs.gem.view.usercontrols.vescurves.VESCurves?>
+<?import ru.nucodelabs.gem.view.usercontrols.vestables.EXPTable?>
+<?import ru.nucodelabs.gem.view.usercontrols.vestables.MODTable?>
 <fx:root type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx"
          xmlns:fx="http://javafx.com/fxml"
          stylesheets="@../common.css"
@@ -34,14 +36,18 @@
                     <Button text="Следующий пикет →" fx:id="nextButton"/>
                 </HBox>
             </HBox>
-            <SplitPane dividerPositions="0.7" maxHeight="Infinity" maxWidth="Infinity" VBox.vgrow="ALWAYS">
+            <SplitPane dividerPositions="0.7" maxHeight="Infinity" maxWidth="Infinity" VBox.vgrow="ALWAYS" orientation="HORIZONTAL">
 
                 <SplitPane orientation="VERTICAL" dividerPositions="0.3" maxHeight="Infinity" VBox.vgrow="ALWAYS">
                     <MisfitStacks fx:id="misfitStacks"/>
                     <VESCurves fx:id="vesCurves"/>
                 </SplitPane>
+                <SplitPane orientation="HORIZONTAL">
+                    <EXPTable fx:id="expTable"/>
+                    <MODTable fx:id="modTable"/>
+                </SplitPane>
 
-                <Placeholder text="Табличное представление"/>
+                <!--<Placeholder text="Табличное представление"/>-->
             </SplitPane>
 
         </VBox>
