--- a/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vestables/EXPTable.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vestables/EXPTable.fxml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            maxWidth="Infinity" minWidth="120">
-    <!--<Label text="%experimentalTable"/>-->
+<?import javafx.scene.layout.VBox?>
+<fx:root type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
+         alignment="CENTER"
+         maxHeight="Infinity"
+         maxWidth="Infinity"
+         stylesheets="@../../common.css"
+         VBox.vgrow="ALWAYS">
+    <Label text="%experimentalTable"/>
     <TableView fx:id="experimentalTable" maxWidth="Infinity" minWidth="120">
         <columns>
             <TableColumn fx:id="expAB_2Column" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0"
@@ -26,4 +25,4 @@
                          text="%experimentalVoltage"/>
         </columns>
     </TableView>
-</AnchorPane>
+</fx:root>
