--- a/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vescurves/VESCurves.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vescurves/VESCurves.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Text?>
 <fx:root type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
@@ -16,12 +17,19 @@
     <LineChart fx:id="lineChart" VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity" animated="false">
         <xAxis>
             <NumberAxis fx:id="lineChartXAxis" forceZeroInRange="false" label="AB/2 (m)"
-                        side="BOTTOM" tickUnit="1.0"/>
+                        side="BOTTOM" tickUnit="1.0" autoRanging="false"/>
         </xAxis>
         <yAxis>
             <NumberAxis fx:id="lineChartYAxis" forceZeroInRange="false"
-                        label="ρₐ (Ohm‧m)" lowerBound="1.0"
-                        side="LEFT" tickUnit="1.0"/>
+                        label="ρₐ (Ohm‧m)" side="LEFT" tickUnit="1.0" autoRanging="false"/>
         </yAxis>
     </LineChart>
+    <HBox>
+        <Button fx:id="minusBtn" text="-"/>
+        <Button fx:id="plusBtn" text="+"/>
+        <Button fx:id="leftBtn" text="←"/>
+        <Button fx:id="rightBtn" text="→"/>
+        <Button fx:id="upBtn" text="↑"/>
+        <Button fx:id="downBtn" text="↓"/>
+    </HBox>
 </fx:root>
